# pyqterminal

./: .gitignore  AGENTS.md  API.md  API_zh.md  CHANGELOG.md  ERRORS.md  HISTORY.md  README.md  README_zh.md  main.py  pyproject.toml  setup.py
examples/: main.py  pty_demo.py
pyqterminal/: __init__.py  cyvterm.html  cyvterm.pyx  terminal.py  vterm.pxd
terminal/: __init__.py  __main__.py  background_propagator.py  widget.py
tests/: 24-bit-color.sh  README.md  bce_raw_test.py  colors.sh  conftest.py  diagnose_pty.py  fg-bg.sh  profile5.prof  pyqterminal-demo.sh  run_catch.py  terminal-testdrive.sh  test_background_propagator.py  test_block_chars.py  test_c  test_c.c  test_cjk.py  test_font_drift.py  test_history.py  test_history2.py  test_history3.py  test_history4.py  test_history5.py  test_history6.py  test_input_handler.py  test_large_window.py  test_minimal.py  test_painter.py  test_perf_small.txt  test_profile.py  test_profile2.py  test_profile3.py  test_profile_base64.py  test_profile_gui.py  test_profile_gui2.py  test_profile_gui3.py  test_profile_gui5.py
