[project]
name = "pyqterminal"
version = "0.2.0"
description = "A cross-platform terminal emulator with Rust backend and PySide6 frontend"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kaihong Han" },
]
requires-python = ">=3.12"
dependencies = [
    "par-term-emu-core-rust>=0.42",
    "pyside6>=6.11.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Terminals",
    "Typing :: Typed",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
pyqterminal = "terminal.__main__:main"

[project.urls]
Repository = "https://github.com/hanyoukuang/pyqterminal"
