[project]
name = "pyqterminal"
version = "0.2.3"
description = "A cross-platform terminal emulator with Rust backend and PySide6 frontend"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kaihong Han" },
]
requires-python = ">=3.12"
dependencies = [
    "par-term-emu-core-rust>=0.42.4",
    "pyside6>=6.11.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Terminals",
    "Typing :: Typed",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.14.0",
    "mypy>=1.16.0",
    "basedpyright>=1.39.7",
]

[project.scripts]
pyqterminal = "terminal.__main__:main"

[project.urls]
Repository = "https://github.com/hanyoukuang/pyqterminal"

# ── Linter / Formatter (ruff) ──────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import ordering)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line-too-long handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["terminal"]

# ── Type Checker (mypy) ─────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["attr-defined"]  # PySide6 enum values dynamically resolved
