[project]
name = "pyqterminal"
version = "0.1.0"
description = "A lightweight, high-performance Python terminal emulator widget for PySide6 using libvterm and Cython."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.11.1",
    "cython>=3.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"
